--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
     <div>
-        <h1> </h1>
-        <h2> </h2>
+        <h1>&nbsp;</h1>
+        <h2>&nbsp;</h2>
 	</div>
 	
 	<footer>
-	    <small>Created by minam1994</small>
+	    <small>Created by Mina Maksić</small>
 	</footer>
 
 	<script src="script.js"></script>
